Fixes alignment on home page

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -55,7 +55,7 @@ code {
 }
 
 .loop {
-  padding-top: 40px;
+  padding-top: 35px;
 }
 
 /* Mobile-specific classes */
